--- a/src/main/webapp/moneytracker.css
+++ b/src/main/webapp/moneytracker.css
@@ -17,7 +17,7 @@ body {
     width:100%;
     height:100%;
     z-index:1000;
-    background-color:white;
+    background-color: transparent;
     opacity: .8;
 }
 
